test_regress/t/t_inst_missing_bad.out
%Warning-PINNOCONNECT: t/t_inst_missing_bad.v:13:17: Cell pin is not connected: '__pinNumber2'
   13 |    sub sub (ok, , nc);
      |                 ^
                       ... For warning description see https://verilator.org/warn/PINNOCONNECT?v=latest
                       ... Use "/* verilator lint_off PINNOCONNECT */" and lint_on around source to disable this message.
%Warning-PINMISSING: t/t_inst_missing_bad.v:13:8: Cell has missing pin: 'missing'
   13 |    sub sub (ok, , nc);
      |        ^~~
%Error: Exiting due to
